<resources>
    <string name="app_name">Craftify</string>
    <string name="fab">Fab</string>
    <string name="every_big_step_start_with_small_step_notes_your_first_idea_and_start_your_journey">Her büyük adım küçük bir adımla başlar. İlk fikrini not et ve yolculuğuna başla!</string>
    <string name="yolculu_una_ba_la">Yolculuğuna başla</string>
    <string name="fikirlerinde_yolculuga_cik">Fikirlerinde yolculuğa çık</string>
    <string name="fikrinin_basligi_ne">Fikrinin başlığı ne?</string>
    <string name="yeni_fikrin_ne">Yeni fikrin ne?</string>
    <string name="henuz_not_pinlemedin">Henüz not pinlemedin</string>
    <string name="notes">Notlarım</string>
    <string name="pinned">Pinlediklerim</string>
    <string name="notu_kaydet">Kaydet</string>
    <string name="flag_button">flag button</string>
    <string name="update">Güncelle</string>
    <string name="fikriniz_guncellendi">Fikriniz güncellendi</string>
    <string name="lutfen_fikrinizi_giriniz">Lütfen fikrinizi giriniz</string>
</resources>