<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddNote">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/update_extended_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="extended fab"
        android:text="@string/update"
        app:icon="@drawable/plus"
        android:fontFamily="@font/urbanist_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbarThumbVertical="@null"
        android:scrollbarThumbHorizontal="@null"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:contentDescription="@string/fab"
                android:src="@drawable/delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/tvDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="150dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/urbanist_bold"
                android:minHeight="48dp"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="50dp" />

            <EditText
                android:id="@+id/tvDetailContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/urbanist_medium"
                android:minHeight="48dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle"
                tools:layout_editor_absoluteX="50dp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvDetailContent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailContent">


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/materialCardView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <TextView
                        android:id="@+id/olusturulmaTarihiDetailNote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/urbanist_medium"
                        android:padding="10dp"
                        android:text="8 Mayıs, 2023"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:clickable="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/materialCardView"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageButton
                        android:id="@+id/isPinnedDetailNote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/flag_button"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:padding="8dp"
                        android:src="@drawable/flag" />
                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>









</androidx.constraintlayout.widget.ConstraintLayout>